--- a/index.html
+++ b/index.html
@@ -34,17 +34,16 @@
                         </div>
                     </div>
                     <div class="row">
-                    <div class="col-12">
-                        <h3>5-Day Forecast</h3>
-                    </div>
+                        <div class=" row col-12">
+                            <h3>5-Day Forecast</h3>
+                        </div>
+                        <div class=" row col-12">
+                            <div class="col bg-primary" id="forecast-one"></div>
+                            <div class="col" id="forecast-two"></div>    
+                        </div>
+
                 </div>
-                <div class="row">
-                    <div class="col forecast bg-primary text-white ml-3 mb-3 rounded"></div>
-                    <div class="col forecast bg-primary text-white ml-3 mb-3 rounded"></div>
-                    <div class="col forecast bg-primary text-white ml-3 mb-3 rounded"></div>
-                    <div class="col forecast bg-primary text-white ml-3 mb-3 rounded"></div>
-                    <div class="col forecast bg-primary text-white ml-3 mb-3 rounded"></div>
-                </div>
+                
             </div>
         </div>
     </div>
