--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-dark bg-dark">
         <span class="text-center navbar-brand h1 w-100">Weather Dashboard</span>
     </nav>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-4 bg-light">
                 <p class="text-md-left my-2 font-weight-bold">Search for a City:</p>
@@ -37,10 +37,9 @@
                         <div class=" row col-12">
                             <h3>5-Day Forecast</h3>
                         </div>
-                        <div class=" row col-12">
-                            <div class="col bg-primary" id="forecast-one"></div>
-                            <div class="col" id="forecast-two"></div>    
-                        </div>
+                        <div class="row" id="day-forecast">
+                                
+                    </div>
 
                 </div>
                 
