Retrieved and display list of cities from local storage

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         </button>
                     </div>
                 </div>
-                <form id="history"></form>
+                <ul id="history"></ul>
             </div>
             <div class="col-8">
                 <div class="container">
