--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
         <!--City name input-->
         <div class="row">
-            <div class="bg-light">
+            <div class="col-2 bg-light">
                 <p class="text-md-left my-2 font-weight-bold">Search for a City:</p>
                 <div class="input-group mb-3">
                     <input id="city-input" type="text" class="form-control" placeholder="" aria-label="Enter city name">
