--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
         <!--City name input-->
         <div class="row">
-            <div class="col-2 bg-light">
+            <div class="col-4 bg-light">
                 <p class="text-md-left my-2 font-weight-bold">Search for a City:</p>
                 <div class="input-group mb-3">
                     <input id="city-input" type="text" class="form-control" placeholder="" aria-label="Enter city name">
@@ -32,7 +32,7 @@
                 <ul id="history"></ul>
             </div>
             <!--Container for City and forecast-->
-            <div class="col-8">
+            <div class=" container-fluid col-8">
                 <div class="container">
                     <!--Current data row-->
                     <div class="row ">
