added button to clear history

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
             <!--History from local storage-->
                 <ul id="history"></ul>
-                <button type="button" id="clear-history" onclick="clearHistory()">clear history</button>
+                <button type="button" id="clear-history">clear history</button>
             </div>
             <!--Container for City and forecast-->
             <div class=" container-fluid col-8">
